added some more information during enemy turn